--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,6 +22,7 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:src="@drawable/displaypicture"
             android:id="@+id/displayPicture" />
             <TextView
                 android:layout_width="wrap_content"
