--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -6,15 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".MyProfileActivity">
 
-    <ProgressBar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="550dp"
-        android:paddingBottom="20dp"
-        />
-
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,6 +25,7 @@
             android:text="@string/my_profile"
             android:padding="10dp"
             android:paddingStart="20dp"
+            android:paddingBottom="20dp"
             android:background="@color/colorPrimaryDark"
             android:textColor="#fff"
             android:textSize="20sp"
@@ -41,15 +33,21 @@
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
+
+
+
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/cardView"
         android:layout_below="@id/appBarLayout">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
+            android:id="@+id/innerLayout"
             android:background="#BAE8E3">
 
 
@@ -60,7 +58,7 @@
                 android:id="@+id/displayPicture"
                 android:layout_marginTop="50dp"
                 android:src="@drawable/displaypicture"
-                android:onClick="openImage"/>
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -74,10 +72,91 @@
 
 
 
-
         </RelativeLayout>
 
 
-
     </androidx.cardview.widget.CardView>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/cardView"
+        android:orientation="horizontal"
+        android:id="@+id/line1"
+        android:onClick="changeDP"
+        android:clickable="true"
+        android:focusable="true">
+
+        <ImageView
+            android:id="@+id/editIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:padding="20dp"
+            android:src="@drawable/ic_change_dp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:nextFocusRight="@id/editIcon"
+            android:id="@+id/changeDP"
+            android:text="Change profile photo"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/line1"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:focusableInTouchMode="true"
+        android:onClick="editUsername">
+
+        <ImageView
+            android:id="@+id/editUsernameImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:padding="20dp"
+            android:src="@drawable/ic_baseline_edit_24"
+            android:onClick="editUsername"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="25dp"
+            android:id="@+id/editUsername"
+            android:text="Edit Username"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:paddingStart="70dp"
+        android:padding="20dp"
+        android:visibility="invisible"
+        android:background="#fff"
+        android:layout_centerVertical="true"
+        android:id="@+id/progressBar"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:id="@+id/progressTextView"
+        android:background="#fff"
+        android:text="Updating profile..."
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingEnd="30dp"
+        android:layout_toRightOf="@id/progressBar"
+        android:layout_centerVertical="true"
+        android:visibility="invisible"
+        android:textSize="20sp" />
+
 </RelativeLayout>
