--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#2AA193</color>
     <color name="colorPrimaryDark">#13887E</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="grey">#DDDDDD</color>
 </resources>
