--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
     android:clickable="true">
 
@@ -21,5 +21,19 @@
         android:layout_marginStart="10dp"
         android:layout_centerVertical="true"
         android:textSize="18sp"/>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        app:civ_border_width="7.5dp"
+        app:civ_border_color="#05df29"
+        android:visibility="gone"
+        android:id="@+id/on"
+        android:src="@mipmap/ic_launcher"
+        android:layout_below="@id/usernameTextView"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="-15dp"
+        android:layout_toEndOf="@+id/displayPicture"/>
+
 
 </RelativeLayout>
